# simple-rust-api

./: Cargo.toml  README.md
src/: api.rs  main.rs
