[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.144", features = ["derive"] }
chrono = "0.4"
vin = "1.0.0"
rand = "0.8.5"
env_logger = "0.8"
log = "0.4"